--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co.ens\" # False"
+    "\"art.vandelay@vandelay.co.endswith('.com')\" # False"
    ]
   },
   {
